# CameraSystem

./: .gitignore  README.md  build.sh  start.sh
launch/: combined.launch.py  launch.py  signaler.launch.py  source.launch.py
signaler/: package-lock.json  package.json  tsconfig.json
signaler/src/: index.ts
src/camera_signaling/: index.js  package-lock.json  package.json
src/cameras_bootstrap/: package.xml  setup.cfg  setup.py
src/cameras_bootstrap/cameras_bootstrap/: cameras_bootstrap.py
src/rtc_streamer/: CMakeLists.txt
src/rtc_streamer/src/: main.cpp
src/signaling/: index.js  package-lock.json
src/streamer/: index.html  index.js  package-lock.json  package.json  rover.html
streamer/: package-lock.json  package.json  rover.html
streamer/src/: index.ts  rover.ts
